--- a/assets/style/css/style.css
+++ b/assets/style/css/style.css
@@ -1,34 +1,45 @@
-/* line 23, ../sass/style.scss */
+/* line 22, ../sass/style.scss */
+#instagram_row {
+  height: 194px;
+  margin-bottom: -66px;
+  position: relative;
+  z-index: 9999999999;
+}
+/* line 28, ../sass/style.scss */
 #instagram_row .slick-list {
   overflow: visible !important;
   height: 200px;
 }
-/* line 28, ../sass/style.scss */
+/* line 33, ../sass/style.scss */
 #instagram_row li {
   outline: 0 !important;
 }
-/* line 30, ../sass/style.scss */
+/* line 35, ../sass/style.scss */
 #instagram_row li a {
   outline: 0 !important;
 }
-/* line 34, ../sass/style.scss */
+/* line 39, ../sass/style.scss */
+#instagram_row ul {
+  margin-bottom: 0 !important;
+}
+/* line 42, ../sass/style.scss */
 #instagram_row .slick-track {
   height: 176px !important;
 }
-/* line 37, ../sass/style.scss */
+/* line 45, ../sass/style.scss */
 #instagram_row .instacenter {
   width: 100%;
   height: 200px;
 }
-/* line 44, ../sass/style.scss */
+/* line 52, ../sass/style.scss */
 #instagram_row.fullwidth:hover button {
   display: block !important;
 }
-/* line 48, ../sass/style.scss */
+/* line 56, ../sass/style.scss */
 #instagram_row.fullwidth button {
   position: absolute;
   height: 181px;
-  top: 0px;
+  top: -8px;
   z-index: 999;
   display: none !important;
   background-color: rgba(51, 51, 51, 0.7) !important;
@@ -40,19 +51,19 @@
   transition: all 0.25s ease;
   outline: unset !important;
 }
-/* line 58, ../sass/style.scss */
+/* line 66, ../sass/style.scss */
 #instagram_row.fullwidth button.slick-next {
   right: 0;
 }
-/* line 63, ../sass/style.scss */
+/* line 71, ../sass/style.scss */
 #instagram_row.fullwidth button.slick-prev {
   left: 0;
 }
-/* line 66, ../sass/style.scss */
+/* line 74, ../sass/style.scss */
 #instagram_row.fullwidth button:hover {
   background-color: #333333 !important;
 }
-/* line 72, ../sass/style.scss */
+/* line 80, ../sass/style.scss */
 #instagram_row.fullwidth a {
   position: relative;
   display: inline-block;
@@ -63,11 +74,11 @@
   transition: all 0.25s ease;
   transform-origin: 50% 100%;
 }
-/* line 78, ../sass/style.scss */
+/* line 86, ../sass/style.scss */
 #instagram_row.fullwidth a img {
   z-index: 99;
 }
-/* line 81, ../sass/style.scss */
+/* line 89, ../sass/style.scss */
 #instagram_row.fullwidth a .iCaption {
   display: none;
   position: absolute;
@@ -79,17 +90,18 @@
   top: 0;
   left: 0;
 }
-/* line 92, ../sass/style.scss */
+/* line 100, ../sass/style.scss */
 #instagram_row.fullwidth a .iCaption span {
   position: absolute;
   top: 50%;
   left: 25%;
-  margin-left: -30px;
-  margin-top: -70px;
+  margin-left: -45px;
+  margin-top: -77px;
   font-size: 14px;
   padding: 10px;
+  width: 250px;
 }
-/* line 102, ../sass/style.scss */
+/* line 111, ../sass/style.scss */
 #instagram_row.fullwidth a:hover {
   width: 300px !important;
   -webkit-transform: scale(1.25);
@@ -105,12 +117,12 @@
   position: absolute;
   overflow: visible !important;
 }
-/* line 108, ../sass/style.scss */
+/* line 117, ../sass/style.scss */
 #instagram_row.fullwidth a:hover img {
   max-height: 600px;
   z-index: 100;
 }
-/* line 113, ../sass/style.scss */
+/* line 122, ../sass/style.scss */
 #instagram_row.fullwidth a:hover .iCaption {
   display: block;
 }
