--- a/assets/style/sass/style.scss
+++ b/assets/style/sass/style.scss
@@ -20,6 +20,11 @@
 }
 
 #instagram_row{
+	height: 194px;
+    margin-bottom: -66px;
+    position:relative;
+    z-index: 9999999999;
+	
 	.slick-list{
 		overflow: visible !important;
 		height:200px;
@@ -30,6 +35,9 @@
 		a{
 			outline: 0 !important;
 		}
+	}
+	ul{
+		margin-bottom: 0 !important; 
 	}
 	.slick-track{
 		height:176px !important;
@@ -48,7 +56,7 @@
   		button{
   			position:absolute;
   			height: 181px;
-  			top: 0px;
+  			top: -8px;
   			z-index: 999;
   			display: none !important;
   			background-color: rgba(51, 51, 51, 0.7) !important;
@@ -93,10 +101,11 @@
 					position: absolute;
 					top:50%;
 					left:25%;
-					margin-left:-30px;
-					margin-top:-70px;
-					font-size: 14px;
-					padding:10px;
+					margin-left: -45px;
+				    margin-top: -77px;
+				    font-size: 14px;
+				    padding: 10px;
+				    width: 250px;
 				}
 			}
 			&:hover{
